src/objects/Subscription__c.object
<CustomObject>
    <fields>
        <fullName>In_Low_Start_Period__c</fullName>
        <description>Defines whether subscription is in low start period. False - no, True -yes.</description>
        <formula>IF( 
 ISNULL(Low_Start_End_Date__c), false, 
 IF(TODAY() &gt; Low_Start_End_Date__c, 
  false, 
  true 
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Defines whether subscription is in low start period. False - no, True -yes.</inlineHelpText>
        <label>In Low Start Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incentive_Description__c</fullName>
        <description>Incentive Description for Adobe Campaign Welcome Email</description>
        <label>Incentive Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Fast_Track__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by the renewal vouchers extraction process to select faster postage</description>
        <label>Is Fast Track</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_First_Renewal__c</fullName>
        <formula>If(Previous_Subscription__r.if_Is_Renewal_Binary__c=1, &quot;No&quot;, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is First Renewal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_MPP_DDCCA_Letter_Extracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is used by batch apex to determine whether the MPP_DDCCA letter is sent to the customer or not. This flag is only editable by the apex job.</description>
        <inlineHelpText>If this flag is checked, then the automated batch process has added this letter to the MPP_DDCCA csv file sent to the fulfillment team for the creation of DD/CCA letters.</inlineHelpText>
        <label>Is MPP DDCCA Letter Extracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_One_Off_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is used to check the in the trigger to see whether subscription status need to be updated to Pending or not</description>
        <label>Is One Off Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Renewal__c</fullName>
        <description>Added to support reporting</description>
        <formula>If(ISNULL(Previous_Subscription_Expiry__c), &quot;New Subscription&quot;, &quot;Renewal&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Renewal?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Using_MPP__c</fullName>
        <formula>IF( Subscriber__r.IsUsingMPP__c == TRUE, &quot;True&quot;, &quot;False&quot;)</formula>
        <label>Is Using MPP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lapsed_Status__c</fullName>
        <formula>IF( TODAY() &gt; ( End_Date__c + 91), &quot;LAPSED&quot;, IF(TODAY() &lt; End_Date__c, &quot;&quot;, &quot;RECENTLY LAPSED&quot;))</formula>
        <label>Lapsed Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change__c</fullName>
        <label>Last Status Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Liab_Calc__c</fullName>
        <description>Trigger calculated value of the deferred liability for this subscription</description>
        <label>Liability Calculation Value (Hidden)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lock_All_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock All Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LowStartTotalPrice__c</fullName>
        <formula>Low_Start_Period__c * Low_Start_Weekly_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Low Start Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Low_Start_Amendment_TCode_Helper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to TCode management that is never persisted. Just used as a helper field to find different active low start tcode in the Amend Subscription flow for low start.</description>
        <inlineHelpText>Lookup field to TCode management that is never persisted. Just used as a helper field to find different active low start tcode in the Amend Subscription flow for low start.</inlineHelpText>
        <label>Low Start Amendment TCode Helper</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected tcode is either not Low Start or not a valid one.</errorMessage>
            <filterItems>
                <field>TCodeManagement__c.Type__c</field>
                <operation>equals</operation>
                <value>Low Start</value>
            </filterItems>
            <filterItems>
                <field>TCodeManagement__c.Valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TCodeManagement__c</referenceTo>
        <relationshipLabel>Subscriptions (Low Start Amendment TCode Helper)</relationshipLabel>
        <relationshipName>Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Low_Start_End_Date__c</fullName>
        <description>Defines the last day in subscription when low start price is applicable.</description>
        <inlineHelpText>Defines the last day in subscription when low start price is applicable.</inlineHelpText>
        <label>Low Start End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Low_Start_Period__c</fullName>
        <description>Low Start Period from related TCode. Populated on subscription creation.</description>
        <inlineHelpText>Low Start Period from related TCode. Populated on subscription creation.</inlineHelpText>
        <label>Low Start Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low_Start_Weekly_Price__c</fullName>
        <description>Price used during low start period.</description>
        <inlineHelpText>Price used during low start period.</inlineHelpText>
        <label>Low Start Weekly Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPP_CC_First_Payment_Amount__c</fullName>
        <label>MPP CC First Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPP_CC_Frequency__c</fullName>
        <label>MPP CC Frequency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPP_CC_Next_Payment_Date__c</fullName>
        <label>MPP CC Next Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPP_DD_First_Payment_Amount__c</fullName>
        <label>MPP DD First Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPP_DD_Frequency__c</fullName>
        <label>MPP DD Frequency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPP_DD_Next_Payment_Date__c</fullName>
        <label>MPP DD Next Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPP_Irregular_Payment_Schedule__c</fullName>
        <description>Stores copy of sfdc generated irregular payment schedule.</description>
        <inlineHelpText>Stores copy of sfdc generated irregular payment schedule.</inlineHelpText>
        <label>MPP Irregular Payment Schedule</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MPP_Pay_Schedule_End_Date__c</fullName>
        <label>MPP Pay Schedule End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MPP_Pay_Schedule_Start_Date__c</fullName>
        <label>MPP Pay Schedule Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MPP_Premium_Subscription_ID__c</fullName>
        <description>External ID for premium subscriptions stored in MPP.</description>
        <externalId>true</externalId>
        <label>MPP Premium Subscription ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPP_Scheduled_First_Payment_Date__c</fullName>
        <description>Plane 1.2. To Track First payment date setup for continious Subscriptions, when setting up payment Schedule on MPP.</description>
        <label>MPP Scheduled First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPP_Subsequent_Amount__c</fullName>
        <description>Used in Low Start subscription to store the first payment amount within the non-low-start period.</description>
        <inlineHelpText>Used in Low Start subscription to store the first payment amount within the non-low-start period.</inlineHelpText>
        <label>MPP Subsequent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPP_Subsequent_Payment_Date__c</fullName>
        <description>Used in Low Start subscription to store the first payment date of the non-low-start amount.</description>
        <inlineHelpText>Used in Low Start subscription to store the first payment date of the non-low-start amount.</inlineHelpText>
        <label>MPP Subsequent Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migration_Stage_failure__c</fullName>
        <label>Migration_Stage_failure</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_Last_Accessed__c</fullName>
        <label>Smartphone Last Accessed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Move_to_Digital__c</fullName>
        <label>Move to Digital</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancellation_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                <fullName>iPad</fullName>
                </value>
                <value>
                <fullName>Kindle</fullName>
                </value>
                <value>
                <fullName>Web Based</fullName>
                </value>
                <value>
                <fullName>E-Paper</fullName>
                </value>
                <value>
                <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MppDDCalloutAttemptCount__c</fullName>
        <label>MppDDCalloutAttemptCount</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MppDDCalloutStage__c</fullName>
        <label>MppDDCalloutStage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>UserManage</fullName>
                </value>
                <value>
                <fullName>UserManage-Failed</fullName>
                </value>
                <value>
                <fullName>DirectDebit</fullName>
                </value>
                <value>
                <fullName>DirectDebit-Failed</fullName>
                </value>
                <value>
                <fullName>PaymentSchedule</fullName>
                </value>
                <value>
                <fullName>PaymentSchedule-Failed</fullName>
                </value>
                <value>
                <fullName>Failed</fullName>
                </value>
                <value>
                <fullName>GetPayment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MppDDLastCalloutDateTime__c</fullName>
        <label>MppDDLastCalloutDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NEW_MPP_Current_Pay_Schedule_End_Dat__c</fullName>
        <formula>Subscriber__r.MPP_CurrentPayScheduleEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NEW_MPP_Current_Pay_Schedule_End_Dat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Sub_Duration__c</fullName>
        <formula>IF(Subscription_Duration_Number__c == 26, 26, 52)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Sub Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Voucher_Batch_Start_Override__c</fullName>
        <label>Next Voucher Batch Start Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Voucher_Batch__c</fullName>
        <formula>Start_Date__c + Nullvalue(Voucher_Offset__c,0) + ((Voucher_Pack_Duration__c * 7) * CEILING((Current_Week_Position__c-( Nullvalue(Voucher_Offset__c/7,0))) / Voucher_Pack_Duration__c))</formula>
        <label>Next Voucher Batch Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Voucher_Extraction_Override__c</fullName>
        <label>Next Voucher Extraction Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Voucher_Extraction__c</fullName>
        <formula>IF(
 AND(
  ISPICKVAL(Subscription_Status__c ,&quot;Pending&quot;),
  OR(
   Is_Fast_Track__c,
   ISBLANK(Previous_Subscription__c)
  )
 ),
 Next_Voucher_Batch__c - 9,
 Next_Voucher_Batch__c - 23
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Voucher Extraction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Voucher_Resends__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Voucher Resends</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offered_Price__c</fullName>
        <label>Offered Price</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Payment_Method_Total__c</fullName>
        <description>Initially populated by ETL to store sum of payments made by old payment gateways. Individual payment records from old gateways were removed so there was a risk of wrong Sum of Payments field evaluation by dynamic counting of sum.</description>
        <label>Old Payment Method Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Taken_By_Company__c</fullName>
        <defaultValue>&quot;Chatham&quot;</defaultValue>
        <description>Company that takes a new sub order - populated by Synthesis</description>
        <inlineHelpText>Company that takes a new sub order - populated by Synthesis</inlineHelpText>
        <label>Order Taken By (Company)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Taken_By_User_Department__c</fullName>
        <defaultValue>$User.FirstName  &amp; &quot; &quot; &amp;  $User.LastName</defaultValue>
        <description>User (for Chatham) or Department (for 3rd party) that takes a new sub order - populated by Synthesis</description>
        <inlineHelpText>User (for Chatham) or Department (for 3rd party) that takes a new sub order - populated by Synthesis</inlineHelpText>
        <label>Order Taken By (User/Department)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Taken_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date of the order from Synthesis</description>
        <inlineHelpText>Date of the order from Synthesis</inlineHelpText>
        <label>Order Taken Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Taken_Method__c</fullName>
        <description>Method of order - populated from Synthesis</description>
        <inlineHelpText>Method of order - populated from Synthesis</inlineHelpText>
        <label>Order Taken Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Outbound</fullName>
                </value>
                <value>
                <fullName>Inbound</fullName>
                </value>
                <value>
                <fullName>Coupon</fullName>
                </value>
                <value>
                <fullName>Auto Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Taken_Wave__c</fullName>
        <description>Details of order wave - populated by Synthesis</description>
        <inlineHelpText>Details of order wave - populated by Synthesis. Manual population should use 535T or 615T</inlineHelpText>
        <label>Order Taken Wave</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>111V</fullName>
                </value>
                <value>
                <fullName>112V</fullName>
                </value>
                <value>
                <fullName>113V</fullName>
                </value>
                <value>
                <fullName>114V</fullName>
                </value>
                <value>
                <fullName>115V</fullName>
                </value>
                <value>
                <fullName>116V</fullName>
                </value>
                <value>
                <fullName>117V</fullName>
                </value>
                <value>
                <fullName>118V</fullName>
                </value>
                <value>
                <fullName>181V</fullName>
                </value>
                <value>
                <fullName>210V</fullName>
                </value>
                <value>
                <fullName>211V</fullName>
                </value>
                <value>
                <fullName>212V</fullName>
                </value>
                <value>
                <fullName>213V</fullName>
                </value>
                <value>
                <fullName>535T</fullName>
                </value>
                <value>
                <fullName>615T</fullName>
                </value>
                <value>
                <fullName>631T</fullName>
                </value>
                <value>
                <fullName>741T</fullName>
                </value>
                <value>
                <fullName>749T</fullName>
                </value>
                <value>
                <fullName>767T</fullName>
                </value>
                <value>
                <fullName>769T</fullName>
                </value>
                <value>
                <fullName>775T</fullName>
                </value>
                <value>
                <fullName>776T</fullName>
                </value>
                <value>
                <fullName>780T</fullName>
                </value>
                <value>
                <fullName>791T</fullName>
                </value>
                <value>
                <fullName>793T</fullName>
                </value>
                <value>
                <fullName>798T</fullName>
                </value>
                <value>
                <fullName>803T</fullName>
                </value>
                <value>
                <fullName>810T</fullName>
                </value>
                <value>
                <fullName>811T</fullName>
                </value>
                <value>
                <fullName>812T</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outstanding_Balance_Voucher_Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to apply Voucher Adjustments to the Outstanding Balance field which can not be added using Workflows as it a Formula field.</description>
        <label>Outstanding Balance Voucher Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <formula>IF (Payment_Details_Received__c = true, (Total_DD_Payment__c - Voucher_Amount_Used__c) + Outstanding_Balance_Voucher_Adjustment__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Balance to Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance_to_from_Customer__c</fullName>
        <description>28/04/10 SB: Change as per Richard Harte request
Old: Astra_Migration_Balance__c + Liab_Calc__c -  Voucher_Amount_Used__c +  Revenue_Write_off_Amount__c</description>
        <formula>IF(End_Date__c&gt; DATE(2009,01,01), Astra_Migration_Balance__c + (Liab_Calc__c - Voucher_Amount_Used__c) + Revenue_Write_off_Amount__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If positive, outstanding balance is to customer. If negative, customer owes TMG.</inlineHelpText>
        <label>Outstanding Balance to/(from) Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid_Until_Calculated__c</fullName>
        <description>This field is populated with paid until date calculated by workflow</description>
        <inlineHelpText>This field is populated with paid until date calculated by workflow</inlineHelpText>
        <label>Paid Until Calculated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid_Until__c</fullName>
        <formula>IF(ISBLANK(Paid_Until_Calculated__c),(Start_Date__c-1) +(( (Total_of_All_Payments__c + Sum_of_Processed_Holiday_Return_Vouchers__c) / Total_Price__c )*7* Subscription_Duration_Number__c),
IF(OR(DD_Not_Completed_Payments_Sum__c = (Total_of_All_Payments__c + Sum_of_Processed_Holiday_Return_Vouchers__c), Weekly_Price__c = 0), Paid_Until_Calculated__c, (Paid_Until_Calculated__c - 1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pay_Schedule_End_Date_Error__c</fullName>
        <formula>IF( DATEVALUE(Account_MPP_Current_Pay_Schedule_End_Dat__c) &lt;  End_Date__c , &quot;ERROR&quot;, &quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay Schedule End Date Error?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentDate__c</fullName>
        <description>1 or 15 of each month</description>
        <label>Payment Date</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Details_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Details Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Schedule__c</fullName>
        <label>Payment Schedule</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Start_Date__c</fullName>
        <inlineHelpText>Estimated start date for first payment. DD payments need a lead time of 2 days so is subtracted from initial start date.</inlineHelpText>
        <label>Payment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Cheque</fullName>
                </value>
                <value>
                <fullName>Direct Debit</fullName>
                </value>
                <value>
                <fullName>Credit Card</fullName>
                </value>
                <value>
                <fullName>Debit Card</fullName>
                </value>
                <value>
                <fullName>Charge Card</fullName>
                </value>
                <value>
                <fullName>Credit/Debit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Pack_Start_Date__c</fullName>
        <formula>IF(ISNULL(Next_Voucher_Batch_Start_Override__c), Start_Date__c + ((Voucher_Pack_Duration__c * 7) * (CEILING(Current_Week_Position__c / Voucher_Pack_Duration__c)-1)), Next_Voucher_Batch_Start_Override__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Voucher Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Price__c</fullName>
        <label>Previous Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Subscription_Expiry__c</fullName>
        <label>Previous Subscription Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Plan__c</fullName>
        <formula>Case(Subscriber__r.Price_Plan__c,

&quot;Plan 0&quot;,&quot;Plan 0&quot;,
&quot;Plan 1&quot;,&quot;Plan 1&quot;,
&quot;Plan 2&quot;,&quot;Plan 2&quot;,
&quot;Plan 3&quot;,&quot;Plan 3&quot;,
&quot;Plan 4&quot;,&quot;Plan 4&quot;,
&quot;Plan 5&quot;,&quot;Plan 5&quot;,
&quot;Plan 6&quot;,&quot;Plan 6&quot;,
&quot;Plan 7&quot;,&quot;Plan 7&quot;,
&quot;Plan 8&quot;,&quot;Plan 8&quot;,
&quot;Plan 9&quot;,&quot;Plan 9&quot;,
&quot;Plan S&quot;,&quot;Plan S&quot;,
&quot;Plan 1&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority_Price__c</fullName>
        <formula>IF(ISNUMBER( Offered_Price__c ), VALUE(Offered_Price__c), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Friendly_Name__c</fullName>
        <description>This field is used by Adobe Campaign welcome emails</description>
        <formula>Product__r.ProductFriendlyName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Friendly Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promo_Code_Expiry_Date__c</fullName>
        <label>Promo Code Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Name__c</fullName>
        <label>Promotion Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Readership_Days__c</fullName>
        <label>Readership (Days)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancellation_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                <fullName>1 Day</fullName>
                </value>
                <value>
                <fullName>2 Days</fullName>
                </value>
                <value>
                <fullName>3 Days</fullName>
                </value>
                <value>
                <fullName>4 Days</fullName>
                </value>
                <value>
                <fullName>5 Days</fullName>
                </value>
                <value>
                <fullName>6 Days</fullName>
                </value>
                <value>
                <fullName>7 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_NumberOfUndatedVouchersRequired__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Renewal_NumberOfUndatedVouchersRequired</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Price_Override__c</fullName>
        <description>If populated, defines a price that will be used with the next subscription renewal.</description>
        <inlineHelpText>If populated, defines a price that will be used with the next subscription renewal.</inlineHelpText>
        <label>Renewal Price Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Product_Override__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Product Override</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>Subscriptions (Renewal Product Override)</relationshipLabel>
        <relationshipName>Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Source__c</fullName>
        <label>Renewal Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Inbound Call</fullName>
                </value>
                <value>
                <fullName>Coupon</fullName>
                </value>
                <value>
                <fullName>Web Order</fullName>
                </value>
                <value>
                <fullName>DM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Status__c</fullName>
        <label>Renewal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>R1 Sent</fullName>
                </value>
                <value>
                <fullName>R2 Sent</fullName>
                </value>
                <value>
                <fullName>T2 Call Scheduled</fullName>
                </value>
                <value>
                <fullName>TL1 Call Scheduled</fullName>
                </value>
                <value>
                <fullName>R3 Sent</fullName>
                </value>
                <value>
                <fullName>TL2 Call Scheduled</fullName>
                </value>
                <value>
                <fullName>L3 Sent</fullName>
                </value>
                <value>
                <fullName>Renewed</fullName>
                </value>
                <value>
                <fullName>DD Price Increase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requires_First_Class_Postage_for_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is ticked by workflow if First Class postage is required in order for the subscriber to receive their vouchers on time at the point of renewal.</description>
        <inlineHelpText>This field is ticked by workflow if First Class postage is required in order for the subscriber to receive their vouchers on time at the point of renewal.</inlineHelpText>
        <label>Requires First Class Postage for Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retailer_Name__c</fullName>
        <formula>Retailer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retailer Name (CACI)</label>
        <type>Text</type>
    </fields>
</CustomObject>